--- a/src/components/DogTrainingListRow/DogTrainingListRow.module.scss
+++ b/src/components/DogTrainingListRow/DogTrainingListRow.module.scss
@@ -1,6 +1,6 @@
 .dog-training-list-row {
     padding: 10px;
-    border-radius: 3px;
+    border-radius: 5px;
     background: #d3d3d3;
     color: #333;
 
@@ -8,5 +8,10 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        font-size: 20px;
+    }
+
+    &__icon {
+        margin-right: 10px;
     }
 }
