--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,8 +3,14 @@
 .app-wrapper {
     background: $main-bg;
     box-sizing: border-box;
-    min-width: 100vw;
-    min-height: 100vh;
-    overflow: hidden;
+    min-width: 90vw;
+    min-height: 90vh;
     color: $main-font-color;
+    padding-top: 40px;
+
+    &__lock-icon {
+        position: fixed !important;
+        right: 15px;
+        top: 15px;
+    }
 }
