--- a/src/components/DogTrainingList/DogTrainingList.module.scss
+++ b/src/components/DogTrainingList/DogTrainingList.module.scss
@@ -1,4 +1,8 @@
 .dog-training-list {
     list-style: none;
     max-width: 90vw;
+    padding: 0;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
 }
