--- a/src/components/PeopleTasks/PeopleTasks.module.scss
+++ b/src/components/PeopleTasks/PeopleTasks.module.scss
@@ -1,4 +1,6 @@
 .people-tasks {
+    font-size: 20px;
+
     &__select {
         min-width: 150px;
     }
@@ -9,7 +11,13 @@
         align-items: center;
         margin-top: 10px;
         max-width: 500px;
-
         flex-wrap: wrap;
+    }
+
+    &__list-row {
+        display: flex;
+        align-items: center;
+        margin-left: 10px;
+        margin-top: 5px;
     }
 }
