--- a/src/components/PeopleTasks/PeopleTasks.module.scss
+++ b/src/components/PeopleTasks/PeopleTasks.module.scss
@@ -1,5 +1,14 @@
+@import '../../styles/consts/colors.scss';
+
 .people-tasks {
     font-size: 20px;
+    padding: 10px 0;
+
+    &__heading {
+        border-top: 1px solid rgba($main-bg, 0.2);
+        font-size: 14px;
+        font-style: italic;
+    }
 
     &__select {
         min-width: 150px;
