--- a/src/components/DogTrainingListRow/DogTrainingListRow.module.scss
+++ b/src/components/DogTrainingListRow/DogTrainingListRow.module.scss
@@ -4,15 +4,30 @@
     background: #d3d3d3;
     color: #333;
 
+    transition: all 150ms ease-in-out;
+
+    &--disabled {
+        @extend .dog-training-list-row;
+        background: rgba(#d3d3d3, 0.2);
+        color: rgba(#fff, 0.2);
+        position: relative;
+    }
+
     &__label {
         display: flex;
         justify-content: space-between;
         align-items: center;
         font-size: 20px;
+        color: inherit !important;
     }
 
     &__icon {
         margin-right: 10px;
+        color: inherit;
+    }
+
+    &__icon-wrapper {
+        color: inherit !important;
     }
 
     &__input {
