--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,8 +3,7 @@
 .app-wrapper {
     background: $main-bg;
     box-sizing: border-box;
-    width: 100%;
-    min-width: 100vw;
+    width: 100vw;
     min-height: 100vh;
     color: $main-font-color;
     padding-top: 40px;
