--- a/src/components/PeopleTasks/PeopleTasks.module.scss
+++ b/src/components/PeopleTasks/PeopleTasks.module.scss
@@ -28,5 +28,9 @@
         align-items: center;
         margin-left: 10px;
         margin-top: 5px;
+
+        @media screen and(max-width: 450px) {
+            margin-left: 0;
+        }
     }
 }
