another style adjustment

--- a/src/components/DogTrainingListRow/DogTrainingListRow.module.scss
+++ b/src/components/DogTrainingListRow/DogTrainingListRow.module.scss
@@ -26,6 +26,10 @@
         color: inherit;
     }
 
+    &__expand-icon {
+        color: inherit;
+    }
+
     &__icon-wrapper {
         color: inherit !important;
     }
