--- a/src/components/Display/PeopleTasks/PeopleTasks.module.scss
+++ b/src/components/Display/PeopleTasks/PeopleTasks.module.scss
@@ -1,36 +1,25 @@
 @import '../../../styles/consts/colors';
 
-.people-tasks {
+.wrapper {
     font-size: 20px;
     padding: 10px 0;
+}
 
-    &__heading {
-        border-top: 1px solid rgba($main-bg, 0.2);
-        font-size: 14px;
-        font-style: italic;
-    }
 
-    &__select {
-        min-width: 150px;
-    }
 
-    &__row-wrapper {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: 10px;
-        max-width: 500px;
-        flex-wrap: wrap;
-    }
+.heading {
+    border-top: 1px solid rgba($main-bg, 0.2);
+    font-size: 14px;
+    font-style: italic;
+}
 
-    &__list-row {
-        display: flex;
-        align-items: center;
-        margin-left: 10px;
-        margin-top: 5px;
+.listRow {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    margin-top: 5px;
 
-        @media screen and(max-width: 450px) {
-            margin-left: 0;
-        }
+    @media screen and(max-width: 450px) {
+        margin-left: 0;
     }
 }
