--- a/src/components/Display/Task/Task.module.scss
+++ b/src/components/Display/Task/Task.module.scss
@@ -1,40 +1,60 @@
-.row {
-  padding: 10px;
-  border-radius: 5px;
-  background: #d3d3d3;
-  color: #333;
+@import '../../../styles/consts/colors';
 
-  transition: all 150ms ease-in-out;
+.row {
+    padding: 10px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    color: #333;
+
+    transition: all 150ms ease-in-out;
+}
+
+.dogs {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.dog {
+  margin-right: 10px;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .disabled {
-  @extend .row;
-  background: rgba(#d3d3d3, 0.2);
-  color: rgba(#fff, 0.2);
-  position: relative;
+    @extend .row;
+    background: rgba(#d3d3d3, 0.2);
+    color: rgba(#fff, 0.2);
+    position: relative;
 }
 
 .label {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 20px;
-  color: inherit !important;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    color: inherit !important;
 }
 
 .iconWrapper {
-  color: inherit !important;
+    color: inherit !important;
 }
 
 .icon {
-  margin-right: 10px;
-  color: inherit;
+    margin-right: 10px;
+    color: inherit;
 }
 
 .expandIcon {
-  color: inherit;
+    color: inherit;
 }
 
 .input {
-  width: 100%;
+    width: 100%;
+}
+
+.description {
+    border-top: 1px solid rgba($main-bg, 0.2);
 }
