--- a/src/MainList/MainList.module.scss
+++ b/src/MainList/MainList.module.scss
@@ -1,3 +1,11 @@
+.wrapper {
+  width: 100%;
+  padding-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .list {
   list-style: none;
   max-width: 90vw;
