--- a/src/MainList/MainList.module.scss
+++ b/src/MainList/MainList.module.scss
@@ -7,14 +7,26 @@
 }
 
 .list {
+  margin-top: 0;
   list-style: none;
-  max-width: 90vw;
-  padding: 0;
   width: 100%;
   box-sizing: border-box;
-  padding: 10px;
+  padding: 0;
 
   @media screen and(max-width: 450px) {
     max-width: 100%;
   }
+}
+
+.columns {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 20px;
+  width: calc(100% - 40px);
+  padding: 0 20px;
+}
+
+.singleColumn {
+  grid-template-columns: 1fr;
+  width: calc(100% - 20px);
 }
