--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -1,7 +1,8 @@
 @import '../../styles/consts/colors';
 
 .sectionWrapper {
-  border-radius: 5px;
+  color: $main-bg;
+  border-radius: 6px;
   padding: 8px;
   border: 1px solid $main-bg;
   position: relative;
@@ -17,7 +18,8 @@
   top: -15px;
   background: $main-font-color;
   left: 10px;
-  padding: 4px;
+  padding: 2px 8px;
+  border-radius: 6px;
 }
 
 .spacingTop {
