--- a/src/Configurator/ConfiguratorTask/ConfiguratorTask.module.scss
+++ b/src/Configurator/ConfiguratorTask/ConfiguratorTask.module.scss
@@ -5,6 +5,12 @@
   color: #333;
 
   transition: all 150ms ease-in-out;
+
+  margin-top: 10px;
+
+  &:first-of-type {
+    margin-top: 0;
+  }
 }
 
 .buttons {
