--- a/src/Configurator/ConfiguratorTaskList/ConfiguratorTaskList.module.scss
+++ b/src/Configurator/ConfiguratorTaskList/ConfiguratorTaskList.module.scss
@@ -1,7 +1,7 @@
 .list {
   list-style: none;
   max-width: 90vw;
-  padding: 0;
+  padding: 10px 0;
   width: 100%;
   box-sizing: border-box;
   padding: 10px;
@@ -9,4 +9,9 @@
   @media screen and(max-width: 450px) {
     max-width: 100%;
   }
+}
+
+.onDragOver {
+  border-radius: 6px;
+  border: 1px dashed #ccc;
 }
