--- a/src/components/Display/Dog/Dog.module.scss
+++ b/src/components/Display/Dog/Dog.module.scss
@@ -12,3 +12,11 @@
     margin-right: 0;
   }
 }
+
+.hasTwoColumns {
+  @media screen and (max-width: 800px) {
+    font-size: 12px;
+    padding: 2px 4px;
+    margin-right: 4px;
+  }
+}
