--- a/src/components/Display/Task/Task.module.scss
+++ b/src/components/Display/Task/Task.module.scss
@@ -7,6 +7,26 @@
     color: $main-bg;
 
     transition: all 150ms ease-in-out;
+
+
+}
+
+.twoColumns {
+    @media screen and (max-width: 800px) {
+        padding: 4px;
+
+        .label {
+            font-size: 16px;
+        }
+
+        .index {
+            font-size: 12px;
+        }
+
+        .description {
+            font-size: 12px;
+        }
+    }
 }
 
 .dogs {
@@ -42,7 +62,7 @@
         'description expandButton';
     font-size: 20px;
     color: inherit !important;
-  align-items: center;
+    align-items: center;
 }
 
 .iconWrapper {
