--- a/src/components/Display/Task/Task.module.scss
+++ b/src/components/Display/Task/Task.module.scss
@@ -5,10 +5,9 @@
     border-radius: 5px;
     background: #d3d3d3;
     color: $main-bg;
-
     transition: all 150ms ease-in-out;
-
-
+    list-style: none;
+    margin: 0;
 }
 
 .twoColumns {
