--- a/src/ResourcePanel/ResourcePanel.module.scss
+++ b/src/ResourcePanel/ResourcePanel.module.scss
@@ -1,6 +1,11 @@
 .wrapper {
   width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.form {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
