--- a/src/components/ButtonBar/ButtonBar.module.scss
+++ b/src/components/ButtonBar/ButtonBar.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
-  width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  padding: 10px;
 }
