--- a/src/MainList/MainList.module.scss
+++ b/src/MainList/MainList.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
-  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
+  padding: 0 20px;
 }
