--- a/src/Configurator/Configurator.module.scss
+++ b/src/Configurator/Configurator.module.scss
@@ -3,4 +3,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 100vw;
+  overflow: hidden;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 50vw);
+  grid-column-gap: 10px;
+  width: 100%;
+  max-width: 100vw;
+  grid-row-gap: 10px;
+
+  @media screen and (max-width: 800px) {
+    grid-column-gap: 4px;
+    grid-row-gap: 4px;
+  }
 }
