--- a/src/Configurator/Configurator.module.scss
+++ b/src/Configurator/Configurator.module.scss
@@ -9,14 +9,12 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 50vw);
-  grid-column-gap: 10px;
+  grid-template-columns: repeat(2, 1fr);
   width: 100%;
   max-width: 100vw;
-  grid-row-gap: 10px;
+  grid-gap: 10px;
 
   @media screen and (max-width: 800px) {
-    grid-column-gap: 4px;
-    grid-row-gap: 4px;
+    grid-gap: 4px;
   }
 }
