--- a/src/Configurator/ConfiguratorTask/ConfiguratorTask.module.scss
+++ b/src/Configurator/ConfiguratorTask/ConfiguratorTask.module.scss
@@ -1,5 +1,5 @@
 .row {
-  padding: 10px;
+  padding: 2px 4px;
   border-radius: 5px;
   background: #d3d3d3;
   color: #333;
@@ -13,53 +13,32 @@
   }
 }
 
-.buttons {
-  display: flex;
-  align-items: center;
-}
-
 .dogs {
-  display: flex;
   flex-wrap: wrap;
   align-items: center;
+  font-size: 12px;
+  display: flex;
+  grid-auto-flow: column;
+  grid-gap: 4px;
 }
 
 .dog {
-  margin-right: 10px;
+  border-right: 2px solid #333;
+  text-align: center;
+  padding: 0 4px;
 
-  &:last-child {
-    margin-right: 0;
+  &:last-of-type {
+    border: none;
   }
-}
-
-.disabled {
-  @extend .row;
-  background: rgba(#d3d3d3, 0.2);
-  color: rgba(#fff, 0.2);
-  position: relative;
 }
 
 .label {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 20px;
   color: inherit !important;
 }
 
 .iconWrapper {
   color: inherit !important;
-}
-
-.icon {
-  margin-right: 10px;
-  color: inherit;
-}
-
-.expandIcon {
-  color: inherit;
-}
-
-.input {
-  width: 100%;
 }
