calendar event type

--- a/src/Calendar/Calendar.module.scss
+++ b/src/Calendar/Calendar.module.scss
@@ -25,11 +25,15 @@
 }
 
 .presenceCell {
-  background: lightpink;
+  background: yellow;
 }
 
 .cellPresent {
   background: lightgreen;
+}
+
+.cellNotPresent {
+  background: lightpink;
 }
 
 .pickPresenceCell {
