--- a/src/Calendar/Calendar.module.scss
+++ b/src/Calendar/Calendar.module.scss
@@ -21,7 +21,10 @@
 
 .gridCell {
   border: 1px solid #333;
-  padding: 4px;
+  padding: 4px 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .presenceCell {
