--- a/src/Calendar/AllPeopleCalendar/AllPeopleCalendar.module.scss
+++ b/src/Calendar/AllPeopleCalendar/AllPeopleCalendar.module.scss
@@ -1,5 +1,16 @@
+.eventWrapper {
+  margin-bottom: 16px;
+
+  &:last-of-type {
+    margin: 0;
+  }
+}
+
+.eventLabel {
+  padding: 4px;
+}
+
 .grid {
-  margin-top: 12px;
   display: grid;
   grid-gap: 12px;
   grid-auto-rows: 1fr;
